chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,18 @@ test/**/*.textest
 test/**/*.pdf
 .sconsign.dblite
 .vscode
+
+*.app
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.lof
+*.lot
+*.log
+*.out
+*.run.xml
+*.gz
+*toc
